k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: project-veil-server
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: project-veil-server
  ports:
    - name: http
      port: 80
      targetPort: http
